# master-thesis

./: .gitignore  CHANGELOG.md  README.md  ae_drift_simul.py  pyproject.toml
notebooks/: detection_metrics_summary.ipynb  helpers.py  studd_utils.py  test_abrupt_insects.ipynb  test_covtype_studd.ipynb  test_detectors_bike.ipynb  test_detectors_covtype.ipynb  test_detectors_electricity.ipynb  test_detectors_posture.ipynb  test_detectors_sea.ipynb  test_electricity_studd.ipynb  test_sea_dnn_ae.ipynb  test_sea_studd.ipynb  test_synthetic_studd.ipynb
scripts/: ae_drift_simul.py  test_sea.ipynb  test_sea.py  test_synthetic_single_drift.py
tscls/core/: results.py  sample.py  state.py
tscls/datasets/: __init__.py  base.py  sea.py
tscls/detection/: ae_detector.py  threshold.py
tscls/models/: autoencoder.py  base_dnn.py  builders.py  dnn_classifier.py  stream_dnn.py
tscls/pipeline/: __init__.py  detector.py  dnn_ae_dd_pipeline.py  monitor.py  pipeline_config.py
tscls/simulation/: stream_simulation.py
tscls/training/: ae_trainer.py  base_trainer.py  stream_trainer.py
