[tool.poetry]
name = "master-thesis"
version = "0.1.0"
description = ""
authors = ["Eirini Tzanaki <irenetzan16@gmail.com>"]
readme = "README.md"
packages = [{ include = "tscls" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
